Closed
Bug 93363
Opened 24 years ago
Closed 24 years ago
"<td nowrap><table><tr><td>lots of text": text doesn't wrap
Categories
(Core :: Layout: Tables, defect)
Tracking
()
VERIFIED
FIXED
mozilla0.9.4
People
(Reporter: jruderman, Assigned: alexsavulov)
References
()
Details
(Keywords: testcase, topembed, Whiteboard: vtrunk, fix in hand, has r= and sr=)
Attachments
(6 files)
|
1.38 KB,
text/html
|
Details | |
|
1.52 KB,
text/html
|
Details | |
|
3.51 KB,
patch
|
Details | Diff | Splinter Review | |
|
717 bytes,
patch
|
Details | Diff | Splinter Review | |
|
2.35 KB,
patch
|
Details | Diff | Splinter Review | |
|
952 bytes,
patch
|
Details | Diff | Splinter Review |
[Broken out of bugscape 5639]
http://www.goclick.com contains something that looks like:
<td nowrap><table><tr><td>lots of text</td></tr></table></td>
In IE, the text in inner td wraps. In NS4 and Moz, it doesn't wrap, making the
table lay out in an ugly way.
Hixie says:
-----
This is easy to fix in quirks mode in the client, add
white-space: normal
...to the rule with '-moz-initial's on table. (I don't know if we support
'-moz-initial' on 'white-space'.)-----
| Reporter | ||
Comment 1•24 years ago
|
||
| Reporter | ||
Updated•24 years ago
|
Updated•24 years ago
|
Target Milestone: --- → mozilla0.9.2
Updated•24 years ago
|
Target Milestone: mozilla0.9.2 → mozilla0.9.4
| Assignee | ||
Comment 2•24 years ago
|
||
Tried to apply white-space: normal; to the most inner cell and it does not
change anything:
table table table td { border: 2px solid #ffaaaa;
white-space: normal;}
in quirks.css we have already:
...
table {
text-align: -moz-initial;
white-space: normal; /* compatible with IE & spec */
}
...
Working on it...
| Assignee | ||
Comment 3•24 years ago
|
||
| Assignee | ||
Comment 4•24 years ago
|
||
| Assignee | ||
Comment 5•24 years ago
|
||
ok patch 45021 works with this URL but not with www.oanda.com... have to find
another way to patch... but the ideea is the same
| Assignee | ||
Comment 6•24 years ago
|
||
| Assignee | ||
Comment 7•24 years ago
|
||
ok patch 45026 works for www.oanda.com too. but it still does not work for the
URL of bug 89731. Searching for a better one. (unfortuantelly the test case for
89731 is not really good)
| Assignee | ||
Comment 8•24 years ago
|
||
| Assignee | ||
Comment 9•24 years ago
|
||
if we apply the patch (attachment 45306 [details] [diff] [review]), the following bugs will also be repaired:
89915 - www.mapblast.com (topembed)
91526 - people.yahoo.com (top100)
92741 - http://www.ensemblestudios.com/aoeii/ (Age of Empire II)
93408 - www.oanda.com (the currency site) (topembed)
Bugscape
5639 - that's a dupe of this bug
Regression testing done for table and block and everything passed.
The only thing that's reflowed different is the regression test for
bug 14159. The difference is that after patching the table can be
resized when the windows resizes. However IE displays the table with
a width that's smaller than the unpatched version. The patched version
varies the width from IE size to unpatched version size. Also it is
always somwhere inbetween.
[see file:///s|/mozilla/layout/html/tests/table/bugs/bug14159-2.html]
I couldn't figure out what was the initial problem so I cannot say that
this bug regressed or not.
KOMODO:
In order to patch this bug in 0.9.2 branch, we have to apply first the patch for
80817!!!
Comment 10•24 years ago
|
||
r=peterl on attachment 45306 [details] [diff] [review]
Updated•24 years ago
|
Whiteboard: fix in hand, has r=, needs sr=
Comment 11•24 years ago
|
||
[s]r=attinasi - I spoke at length with Alex about this, and it seems like it is
the most expedient way to deal with this problem (though it feels a bit like a
special-case where one should _ideally_ not be needed).
| Assignee | ||
Comment 12•24 years ago
|
||
| Assignee | ||
Comment 13•24 years ago
|
||
the patch attachment 45698 [details] [diff] [review] is replacing 45306. Is the same patch, the only
different thing is that I got rid of the additional argument in the call to
PostPlaceLine(...).
attachment 45698 [details] [diff] [review] is the latest proposed patch.
Updated•24 years ago
|
Whiteboard: fix in hand, has r=, needs sr= → fix in hand, has r= and sr=
| Assignee | ||
Comment 14•24 years ago
|
||
fixed on trunk
Whiteboard: fix in hand, has r= and sr= → vtrunk, fix in hand, has r= and sr=
Comment 15•24 years ago
|
||
The patch did fix the bug.. the attached URL and the testcases looks good in
NS6.1.. I checked it on the trunk build ID # 2001081504.. Platform: WIN2K
Marking this bug fixed
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 16•24 years ago
|
||
Checked into MOZILLA_0_9_2_BRANCH
Comment 18•24 years ago
|
||
Note that IE6 does not do what the testcase says it does on:
http://bugzilla.mozilla.org/showattachment.cgi?attach_id=45020
| Assignee | ||
Comment 19•24 years ago
|
||
I didn't tried IE 6 yet.
I used IE 5.5 as a reference (IE6 is still beta) and it works, otherwise we
wouldn't have all those pages on the web that do not work with our browser and
I suspect that this will last. IE5.x is the most used browser and this will last
for a while too.
The next thing is that in quirks mode we do not inherit nowrap in the table so
the cell text in attachment 44512 [details] should wrap. Now even if we would inherit the
nowrap in the table, one may wish to override that in his markup so we should
support that I think.
Comment 20•24 years ago
|
||
The nowrap in the <td> tag works fine and the testcase looks fine on IE and
NS6.2 branch.. Build Id : 2001-09-25
paltform: win2K
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•