Checkin for AlexSavulov@netscape.com: fixes problem of block inside of a NOWRAP block causing incorrect sizing. b=93363, r=peterl sr=attinasi